<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundncc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.home.ncapp.MainActivity"
    tools:ignore="HardcodedText,ContentDescription,SpUsage" >

    <TextView
        android:id="@+id/paraTvusername" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/sheader"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />

    <TextView
        android:id="@+id/paratextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paraTvusername"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/paraTvusername"
        android:gravity="center"
        android:text="@string/noo_subjudul"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paratextView1"
        android:layout_alignRight="@+id/paratextView1"
        android:layout_below="@+id/paratextView1"
        android:gravity="center"
        android:text="@string/noo_subversion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/btnPara"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPosting"
        android:layout_alignRight="@+id/btnPosting"
        android:layout_below="@+id/btnPosting"
        android:height="30dp"
        android:text="@string/mnu_parameter_noo"
        android:textSize="10dp" />

    <Button
        android:id="@+id/btnKeluar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPara"
        android:layout_alignRight="@+id/btnPara"
        android:layout_below="@+id/btnPara"
        android:height="30dp"
        android:text="@string/mnu_exit_noo"
        android:textSize="10dp" />

    <Button
        android:id="@+id/btnPosting"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnList"
        android:layout_alignRight="@+id/btnList"
        android:layout_below="@+id/btnList"
        android:height="30dp"
        android:text="@string/mnu_sync_posting_noo"
        android:textSize="10dp" />

    <Button
        android:id="@+id/btnList"
        style="@drawable/btnmerah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_centerVertical="true"
        android:height="30dp"
        android:text="@string/mnu_overview_list_noo"
        android:textSize="10dp" />

</RelativeLayout>