<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundncc"
    android:orientation="vertical"
    tools:ignore="HardcodedText,ContentDescription" >

    <TextView
        android:id="@+id/splashTvversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashTvJudul"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/noo_subversion" />

    <TextView
        android:id="@+id/splashTvJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:text="@string/sheader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/splashTvcomp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="71dp"
        android:gravity="center"
        android:text="@string/ptcompany"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>